--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-redis-cache": "^1.1.3",
     "luxon": "^2.0.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "redis": "^3.1.2"
   }
 }
