--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "huskython-apiv2",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "@googleapis/calendar": "^0.2.0",
-    "axios": "^0.21.4",
+    "axios": "^1.11.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-redis-cache": "^1.1.3",
     "luxon": "^2.5.0",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "redis": "^3.1.2"
   }
 }
